fix: don't show nav toggle on mobile
Because nav on mobile is empty anyway.

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -385,6 +385,10 @@ p {
   @apply hyphens-auto;
 }
 
+.navbar__toggle {
+  @apply hidden;
+}
+
 #entwicklungsmatrix,
 #prozessverlauf,
 #mitspielerinnen-kartieren,
